дополнила макет подвала

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             ></button>
             <div class="header-menu">
               <section class="drop-menu">
-                <h3 class="hidden">section drop menu</h3>
+                <h3 class="hidden-section">section drop menu</h3>
                 <ul class="menu">
                   <li class="menu-list">
                     <details>
@@ -54,6 +54,20 @@
       </div>
     </header>
     <main class="main"></main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <nav class="nav">
+        <div class="header-logo">
+          <a href="#" class="header-logo-href">
+            <div class="title">
+              <p>Классные</p>
+              <p>экскурсии</p>
+            </div>
+            <img class="logo-img" src="img/logo.png" alt="logo" />
+          </a>
+        </div>
+        <div class="footer-info">Контакты</div>
+      </nav>
+      VIS© 2025
+    </footer>
   </body>
 </html>
