добавила div container в main и footer

--- a/index.html
+++ b/index.html
@@ -53,21 +53,25 @@
         </nav>
       </div>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <div class="container main-container"></div>
+    </main>
     <footer class="footer">
-      <nav class="nav">
-        <div class="header-logo">
-          <a href="#" class="header-logo-href">
-            <div class="title">
-              <p>Классные</p>
-              <p>экскурсии</p>
-            </div>
-            <img class="logo-img" src="img/logo.png" alt="logo" />
-          </a>
-        </div>
-        <div class="footer-info">Контакты</div>
-      </nav>
-      VIS© 2025
+      <div class="container footer-container">
+        <nav class="nav">
+          <div class="header-logo">
+            <a href="#" class="header-logo-href">
+              <div class="title">
+                <p>Классные</p>
+                <p>экскурсии</p>
+              </div>
+              <img class="logo-img" src="img/logo.png" alt="logo" />
+            </a>
+          </div>
+          <div class="footer-info">Контакты</div>
+        </nav>
+        VIS© 2025
+      </div>
     </footer>
   </body>
 </html>
