добавила стили названию сайта и иконку вместо логотипа в шапку сайта

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Классные экскурсии</title>
     <link rel="stylesheet" href="scss-css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
@@ -12,11 +18,11 @@
         <nav class="nav">
           <div class="header-logo">
             <a href="#" class="header-logo-href">
-              <div class="title">
+              <div class="header-title">
                 <p>Классные</p>
                 <p>экскурсии</p>
               </div>
-              <img class="logo-img" src="img/logo.png" alt="logo" />
+              <img class="logo-img" src="img/logo2.png" alt="logo" />
             </a>
           </div>
           <div class="main-nav">
