--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
         <nav class="nav">
           <div class="header-logo">
             <a href="#" class="header-logo-href">
-              <div class="header-title">
-                <p>Классные</p>
-                <p>экскурсии</p>
-              </div>
-              <img class="logo-img" src="img/logo2.png" alt="logo" />
+              <img class="logo-img" src="img/logo.png" alt="logo" />
+              <span class="header-title">Классные &nbsp; &nbsp;экскурсии</span>
             </a>
           </div>
           <div class="main-nav">
-            <button
-              type="button"
-              title="btn-main-nav"
-              class="burgers-menu"
-            ></button>
+            <input type="checkbox" id="menu" title="drop-menu" />
+            <label for="menu">
+              <span class="burger">
+                <span></span>
+              </span>
+            </label>
+
             <div class="header-menu">
               <section class="drop-menu">
                 <h3 class="hidden-section">section drop menu</h3>
@@ -47,10 +46,13 @@
                     <a href="#" class="menu-link">Экскурсоводы</a>
                   </li>
                   <li class="menu-list">
-                    <a href="#" class="menu-link">Это интересно</a>
+                    <a href="#" class="menu-link">Блог</a>
                   </li>
                   <li class="menu-list">
                     <a href="#" class="menu-link">Отзывы</a>
+                  </li>
+                  <li class="menu-list">
+                    <a href="#" class="menu-link">О компании</a>
                   </li>
                 </ul>
               </section>
