доделала main-nav

--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
                 <h3 class="hidden-section">section drop menu</h3>
                 <ul class="menu">
                   <li class="menu-list">
-                    <details>
-                      <summary>Экскурсии</summary>
-                      <a href="#" class="menu-link">1-4 классы</a>
-                      <a href="#" class="menu-link">5-9 классы</a>
-                      <a href="#" class="menu-link">10-11 классы</a>
+                    <details class="list">
+                      <summary class="link-list">Экскурсии</summary>
+                      <div class="list-menu">
+                        <a href="#" class="menu-link">1-4 классы</a>
+                        <a href="#" class="menu-link">5-9 классы</a>
+                        <a href="#" class="menu-link">10-11 классы</a>
+                      </div>
                     </details>
                   </li>
                   <li class="menu-list">
@@ -56,6 +58,7 @@
                   </li>
                 </ul>
               </section>
+              <div class="nav-footer"></div>
             </div>
           </div>
         </nav>
