--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header class="header">
       <div class="container header-container">
         <nav class="nav">
-          <div class="header-logo">
-            <a href="#" class="header-logo-href">
+          <div class="logo">
+            <a href="#" class="logo-href">
               <img class="logo-img" src="img/logo.png" alt="logo" />
-              <span class="header-title">Классные &nbsp; &nbsp;экскурсии</span>
+              <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
             </a>
           </div>
           <div class="main-nav">
@@ -70,18 +70,28 @@
     <footer class="footer">
       <div class="container footer-container">
         <nav class="nav">
-          <div class="header-logo">
-            <a href="#" class="header-logo-href">
-              <div class="title">
-                <p>Классные</p>
-                <p>экскурсии</p>
-              </div>
+          <div class="logo">
+            <a href="#" class="logo-href">
               <img class="logo-img" src="img/logo.png" alt="logo" />
+              <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
             </a>
           </div>
-          <div class="footer-info">Контакты</div>
+
+          <div class="footer-menu">
+            <ul class="menu">
+              <li class="footer-menu-list">
+                <a href="#" class="menu-link">Отзывы</a>
+              </li>
+              <li class="footer-menu-list">
+                <a href="#" class="menu-link">О компании</a>
+              </li>
+              <li class="footer-menu-list">
+                <img class="icon-img" src="img/icon-telegram.png" alt="icon" />
+              </li>
+            </ul>
+          </div>
         </nav>
-        VIS© 2025
+        <p class="info">VIS© 2025</p>
       </div>
     </footer>
   </body>
