переписала меню бургера, убрала фон при появлении бургерного меню

--- a/index.html
+++ b/index.html
@@ -23,12 +23,9 @@
             </a>
           </div>
           <div class="main-nav">
-            <input type="checkbox" id="menu" title="drop-menu" />
-            <label for="menu">
-              <span class="burger">
-                <span></span>
-              </span>
-            </label>
+            <button class="burger" type="button" title="burger-btn">
+              <span></span>
+            </button>
 
             <div class="header-menu">
               <section class="drop-menu">
@@ -58,7 +55,6 @@
                   </li>
                 </ul>
               </section>
-              <div class="nav-footer"></div>
             </div>
           </div>
         </nav>
