создала страницу экскурсий, прописала ссылки

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Классные экскурсии</title>
+    <title>Экскурсии</title>
 
     <link rel="stylesheet" href="scss-css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,7 +18,7 @@
       <div class="container header-container">
         <nav class="nav">
           <div class="logo">
-            <a href="#" class="logo-href">
+            <a href="./index.html" class="logo-href">
               <img class="logo-img" src="img/logo.png" alt="logo" />
               <span class="title">Классные &nbsp; &nbsp;экскурсии</span>
             </a>
@@ -36,15 +36,9 @@
                     <details class="list">
                       <summary class="link-list">Экскурсии</summary>
                       <div class="list-menu">
-                        <a href="./categoryPage.html" class="menu-link"
-                          >1-4 классы</a
-                        >
-                        <a href="./categoryPage.html" class="menu-link"
-                          >5-9 классы</a
-                        >
-                        <a href="./categoryPage.html" class="menu-link"
-                          >10-11 классы</a
-                        >
+                        <a href="#" class="menu-link">1-4 классы</a>
+                        <a href="#" class="menu-link">5-9 классы</a>
+                        <a href="#" class="menu-link">10-11 классы</a>
                       </div>
                     </details>
                   </li>
@@ -67,10 +61,16 @@
         </nav>
       </div>
     </header>
-    <main class="main main-page-container">
-      <h1 class="hidden-section">Welcome to School Excursions</h1>
-      <div class="container main-container"></div>
+
+    <section class="breadcrumbls">
+      <h3 class="hidden-section">section breadcrumbls</h3>
+      Главная/Экскурсии/1-4 класс
+    </section>
+
+    <main class="main category-main-container">
+      <h1 class="hidden-section">Welcome to School Excursions category page</h1>
     </main>
+
     <footer class="footer">
       <div class="container footer-container">
         <nav class="nav">
