добавила хлебные крошки на страницу экскурсий

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -64,7 +64,21 @@
 
     <section class="breadcrumbls">
       <h3 class="hidden-section">section breadcrumbls</h3>
-      Главная/Экскурсии/1-4 класс
+      <div class="container">
+        <ul class="menu-breadcrumbs">
+          <li class="menu-list-breadcrumbs">
+            <a href="./index.html" class="menu-link-breadcrumbs">Главная</a>
+            <span class="arrow-menu-breadcrumbs">/</span>
+          </li>
+          <li class="menu-list-breadcrumbs">
+            <a href="./index.html" class="menu-link-breadcrumbs">Экскурсии</a>
+            <span class="arrow-menu-breadcrumbs">/</span>
+          </li>
+          <li class="menu-list-breadcrumbs">
+            <a href="./index.html" class="menu-link-breadcrumbs">1-4 класс</a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <main class="main category-main-container">
