--- a/categoryPage.html
+++ b/categoryPage.html
@@ -62,20 +62,20 @@
       </div>
     </header>
 
-    <section class="breadcrumbls">
-      <h3 class="hidden-section">section breadcrumbls</h3>
+    <section class="breadcrumbles">
+      <h3 class="hidden-section">section breadcrumbles</h3>
       <div class="container">
-        <ul class="menu-breadcrumbs">
-          <li class="menu-list-breadcrumbs">
-            <a href="./index.html" class="menu-link-breadcrumbs">Главная</a>
-            <span class="arrow-menu-breadcrumbs">/</span>
+        <ul class="menu-breadcrumbles">
+          <li class="menu-list-breadcrumbles">
+            <a href="./index.html" class="menu-link-breadcrumbles">Главная</a>
+            <span class="arrow-menu-breadcrumbles">/</span>
           </li>
-          <li class="menu-list-breadcrumbs">
-            <a href="./index.html" class="menu-link-breadcrumbs">Экскурсии</a>
-            <span class="arrow-menu-breadcrumbs">/</span>
+          <li class="menu-list-breadcrumbles">
+            <a href="#" class="menu-link-breadcrumbles">Экскурсии</a>
+            <span class="arrow-menu-breadcrumbles">/</span>
           </li>
-          <li class="menu-list-breadcrumbs">
-            <a href="./index.html" class="menu-link-breadcrumbs">1-4 класс</a>
+          <li class="menu-list-breadcrumbles-bold">
+            <a href="#" class="menu-link-breadcrumbles">1-4 класс</a>
           </li>
         </ul>
       </div>
