добавила карточку экскурсии

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -68,14 +68,14 @@
         <ul class="menu-breadcrumbles">
           <li class="menu-list-breadcrumbles">
             <a href="./index.html" class="menu-link-breadcrumbles">Главная</a>
-            <span class="arrow-menu-breadcrumbles">/</span>
+            <span class="arrow-menu-breadcrumbles"> </span>
           </li>
           <li class="menu-list-breadcrumbles">
             <a href="#" class="menu-link-breadcrumbles">Экскурсии</a>
-            <span class="arrow-menu-breadcrumbles">/</span>
+            <span class="arrow-menu-breadcrumbles"></span>
           </li>
-          <li class="menu-list-breadcrumbles-bold">
-            <a href="#" class="menu-link-breadcrumbles">1-4 класс</a>
+          <li class="menu-list-breadcrumbles">
+            <a href="#" class="menu-link-breadcrumbles-bold">1-4 класс</a>
           </li>
         </ul>
       </div>
@@ -83,6 +83,13 @@
 
     <main class="main category-main-container">
       <h1 class="hidden-section">Welcome to School Excursions category page</h1>
+
+      <div class="container">
+        <details class="item-list">
+          <summary class="item">Экскурсия 1</summary>
+          Описание экскурсии
+        </details>
+      </div>
     </main>
 
     <footer class="footer">
