--- a/categoryPage.html
+++ b/categoryPage.html
@@ -85,10 +85,70 @@
       <h1 class="hidden-section">Welcome to School Excursions category page</h1>
 
       <div class="container">
-        <details class="item-list">
-          <summary class="item">Экскурсия 1</summary>
-          Описание экскурсии
-        </details>
+        <section class="items">
+          <h3 class="hidden-section">section excurtions</h3>
+
+          <div class="item-cart">
+            <details class="item-list">
+              <summary class="item">Подробнее ...</summary>
+              <div class="item-desc">
+                <h3 class="item-title">Название эскурсии</h3>
+                <p class="item-text">Описание экскурсии</p>
+              </div>
+            </details>
+          </div>
+
+          <details class="details">
+            <summary class="details__title">Question 1</summary>
+            <div class="details__content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+                omnis beatae itaque! Maxime consequuntur architecto,
+                voluptatibus iste aliquid quaerat dolores, culpa repellendus
+                optio omnis rem saepe quisquam incidunt, numquam molestias?
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+                omnis beatae itaque! Maxime consequuntur architecto,
+                voluptatibus iste aliquid quaerat dolores, culpa repellendus
+                optio omnis rem saepe quisquam incidunt, numquam molestias?
+              </p>
+            </div>
+          </details>
+          <details class="details">
+            <summary class="details__title">Question 2</summary>
+            <div class="details__content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+                omnis beatae itaque! Maxime consequuntur architecto,
+                voluptatibus iste aliquid quaerat dolores, culpa repellendus
+                optio omnis rem saepe quisquam incidunt, numquam molestias?
+              </p>
+            </div>
+          </details>
+          <details class="details">
+            <summary class="details__title">Question 3</summary>
+            <div class="details__content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+                omnis beatae itaque! Maxime consequuntur architecto,
+                voluptatibus iste aliquid quaerat dolores, culpa repellendus
+                optio omnis rem saepe quisquam incidunt, numquam molestias?
+              </p>
+            </div>
+          </details>
+          <details class="details">
+            <summary class="details__title">Question 4</summary>
+            <div class="details__content">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+                omnis beatae itaque! Maxime consequuntur architecto,
+                voluptatibus iste aliquid quaerat dolores, culpa repellendus
+                optio omnis rem saepe quisquam incidunt, numquam molestias?
+              </p>
+            </div>
+          </details>
+        </section>
       </div>
     </main>
 
