дописала стили в карточке экскурсий и прописала медиа запросы на странце экскурсий

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -85,69 +85,143 @@
       <h1 class="hidden-section">Welcome to School Excursions category page</h1>
 
       <div class="container">
-        <section class="items">
+        <section class="items-container">
           <h3 class="hidden-section">section excurtions</h3>
 
           <div class="item-cart">
+            <img src="./img/sobor.jpg" class="item-img" alt="item-img" />
             <details class="item-list">
-              <summary class="item">Подробнее ...</summary>
+              <summary class="item-title">Красная Площадь</summary>
               <div class="item-desc">
-                <h3 class="item-title">Название эскурсии</h3>
                 <p class="item-text">Описание экскурсии</p>
+                <p class="item-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab et
+                  voluptates pariatur dolorum non harum adipisci fugit sit
+                  quaerat repellendus doloremque at, assumenda sunt provident ea
+                  eveniet amet ipsam, quas vitae repudiandae. Vel asperiores
+                  nemo expedita illo recusandae animi consequatur molestiae
+                  dicta neque ipsam impedit praesentium reiciendis delectus
+                  enim, numquam ullam unde, pariatur cupiditate voluptates?
+                  Quidem maiores ut ullam blanditiis laborum illo modi placeat
+                  tempora repellendus, laudantium sapiente sint quam aliquam
+                  nobis porro cupiditate ad maxime laboriosam omnis. Nam numquam
+                  exercitationem nemo amet sunt tempore officiis iste, voluptas
+                  eius est. Praesentium autem sint cupiditate nemo aperiam
+                  nihil? Enim similique id dignissimos corporis a repellendus,
+                  sapiente nihil architecto reiciendis eius voluptatibus
+                  recusandae rem consectetur minima et nesciunt eligendi
+                  doloremque qui tempora voluptas unde maiores. Incidunt placeat
+                  fuga voluptate voluptatem dicta eos similique sit esse
+                  cupiditate veritatis, tempore, porro ab expedita modi fugiat
+                  labore hic. Rem possimus repellat, fuga quam atque
+                  necessitatibus pariatur ducimus dolorum temporibus accusamus
+                  voluptatibus quo, tempore minus commodi provident reiciendis
+                  ipsam inventore deserunt cupiditate quaerat. Aliquid, laborum
+                  maiores. Aliquid adipisci porro doloribus iste! Veritatis
+                  eveniet obcaecati laboriosam fugiat atque at reprehenderit
+                  delectus aperiam velit similique, maxime culpa a dolor
+                  perspiciatis, voluptas fugit dicta voluptatum? Doloribus velit
+                  voluptas ratione eius. Magnam ut ipsa ullam provident voluptas
+                  voluptatum neque blanditiis fugiat dolorem doloribus harum
+                  perferendis aliquam tempore qui aperiam, cupiditate error eum
+                  aut facilis laudantium in nisi! Nam fugit aspernatur aliquid
+                  culpa est, incidunt quibusdam esse consectetur possimus sequi,
+                  placeat nesciunt laboriosam dolores illum necessitatibus
+                  aperiam earum sit explicabo. Expedita!
+                </p>
               </div>
             </details>
           </div>
 
-          <details class="details">
-            <summary class="details__title">Question 1</summary>
-            <div class="details__content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-                omnis beatae itaque! Maxime consequuntur architecto,
-                voluptatibus iste aliquid quaerat dolores, culpa repellendus
-                optio omnis rem saepe quisquam incidunt, numquam molestias?
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-                omnis beatae itaque! Maxime consequuntur architecto,
-                voluptatibus iste aliquid quaerat dolores, culpa repellendus
-                optio omnis rem saepe quisquam incidunt, numquam molestias?
-              </p>
-            </div>
-          </details>
-          <details class="details">
-            <summary class="details__title">Question 2</summary>
-            <div class="details__content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-                omnis beatae itaque! Maxime consequuntur architecto,
-                voluptatibus iste aliquid quaerat dolores, culpa repellendus
-                optio omnis rem saepe quisquam incidunt, numquam molestias?
-              </p>
-            </div>
-          </details>
-          <details class="details">
-            <summary class="details__title">Question 3</summary>
-            <div class="details__content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-                omnis beatae itaque! Maxime consequuntur architecto,
-                voluptatibus iste aliquid quaerat dolores, culpa repellendus
-                optio omnis rem saepe quisquam incidunt, numquam molestias?
-              </p>
-            </div>
-          </details>
-          <details class="details">
-            <summary class="details__title">Question 4</summary>
-            <div class="details__content">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-                omnis beatae itaque! Maxime consequuntur architecto,
-                voluptatibus iste aliquid quaerat dolores, culpa repellendus
-                optio omnis rem saepe quisquam incidunt, numquam molestias?
-              </p>
-            </div>
-          </details>
+          <div class="item-cart">
+            <img src="./img/sobor.jpg" class="item-img" alt="item-img" />
+            <details class="item-list">
+              <summary class="item-title">Красная Площадь</summary>
+              <div class="item-desc">
+                <p class="item-text">Описание экскурсии</p>
+                <p class="item-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab et
+                  voluptates pariatur dolorum non harum adipisci fugit sit
+                  quaerat repellendus doloremque at, assumenda sunt provident ea
+                  eveniet amet ipsam, quas vitae repudiandae. Vel asperiores
+                  nemo expedita illo recusandae animi consequatur molestiae
+                  dicta neque ipsam impedit praesentium reiciendis delectus
+                  enim, numquam ullam unde, pariatur cupiditate voluptates?
+                  Quidem maiores ut ullam blanditiis laborum illo modi placeat
+                  tempora repellendus, laudantium sapiente sint quam aliquam
+                  nobis porro cupiditate ad maxime laboriosam omnis. Nam numquam
+                  exercitationem nemo amet sunt tempore officiis iste, voluptas
+                  eius est. Praesentium autem sint cupiditate nemo aperiam
+                  nihil? Enim similique id dignissimos corporis a repellendus,
+                  sapiente nihil architecto reiciendis eius voluptatibus
+                  recusandae rem consectetur minima et nesciunt eligendi
+                  doloremque qui tempora voluptas unde maiores. Incidunt placeat
+                  fuga voluptate voluptatem dicta eos similique sit esse
+                  cupiditate veritatis, tempore, porro ab expedita modi fugiat
+                  labore hic. Rem possimus repellat, fuga quam atque
+                  necessitatibus pariatur ducimus dolorum temporibus accusamus
+                  voluptatibus quo, tempore minus commodi provident reiciendis
+                  ipsam inventore deserunt cupiditate quaerat. Aliquid, laborum
+                  maiores. Aliquid adipisci porro doloribus iste! Veritatis
+                  eveniet obcaecati laboriosam fugiat atque at reprehenderit
+                  delectus aperiam velit similique, maxime culpa a dolor
+                  perspiciatis, voluptas fugit dicta voluptatum? Doloribus velit
+                  voluptas ratione eius. Magnam ut ipsa ullam provident voluptas
+                  voluptatum neque blanditiis fugiat dolorem doloribus harum
+                  perferendis aliquam tempore qui aperiam, cupiditate error eum
+                  aut facilis laudantium in nisi! Nam fugit aspernatur aliquid
+                  culpa est, incidunt quibusdam esse consectetur possimus sequi,
+                  placeat nesciunt laboriosam dolores illum necessitatibus
+                  aperiam earum sit explicabo. Expedita!
+                </p>
+              </div>
+            </details>
+          </div>
+
+          <div class="item-cart">
+            <img src="./img/sobor.jpg" class="item-img" alt="item-img" />
+            <details class="item-list">
+              <summary class="item-title">Красная Площадь</summary>
+              <div class="item-desc">
+                <p class="item-text">Описание экскурсии</p>
+                <p class="item-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab et
+                  voluptates pariatur dolorum non harum adipisci fugit sit
+                  quaerat repellendus doloremque at, assumenda sunt provident ea
+                  eveniet amet ipsam, quas vitae repudiandae. Vel asperiores
+                  nemo expedita illo recusandae animi consequatur molestiae
+                  dicta neque ipsam impedit praesentium reiciendis delectus
+                  enim, numquam ullam unde, pariatur cupiditate voluptates?
+                  Quidem maiores ut ullam blanditiis laborum illo modi placeat
+                  tempora repellendus, laudantium sapiente sint quam aliquam
+                  nobis porro cupiditate ad maxime laboriosam omnis. Nam numquam
+                  exercitationem nemo amet sunt tempore officiis iste, voluptas
+                  eius est. Praesentium autem sint cupiditate nemo aperiam
+                  nihil? Enim similique id dignissimos corporis a repellendus,
+                  sapiente nihil architecto reiciendis eius voluptatibus
+                  recusandae rem consectetur minima et nesciunt eligendi
+                  doloremque qui tempora voluptas unde maiores. Incidunt placeat
+                  fuga voluptate voluptatem dicta eos similique sit esse
+                  cupiditate veritatis, tempore, porro ab expedita modi fugiat
+                  labore hic. Rem possimus repellat, fuga quam atque
+                  necessitatibus pariatur ducimus dolorum temporibus accusamus
+                  voluptatibus quo, tempore minus commodi provident reiciendis
+                  ipsam inventore deserunt cupiditate quaerat. Aliquid, laborum
+                  maiores. Aliquid adipisci porro doloribus iste! Veritatis
+                  eveniet obcaecati laboriosam fugiat atque at reprehenderit
+                  delectus aperiam velit similique, maxime culpa a dolor
+                  perspiciatis, voluptas fugit dicta voluptatum? Doloribus velit
+                  voluptas ratione eius. Magnam ut ipsa ullam provident voluptas
+                  voluptatum neque blanditiis fugiat dolorem doloribus harum
+                  perferendis aliquam tempore qui aperiam, cupiditate error eum
+                  aut facilis laudantium in nisi! Nam fugit aspernatur aliquid
+                  culpa est, incidunt quibusdam esse consectetur possimus sequi,
+                  placeat nesciunt laboriosam dolores illum necessitatibus
+                  aperiam earum sit explicabo. Expedita!
+                </p>
+              </div>
+            </details>
+          </div>
         </section>
       </div>
     </main>
