добавила надпись на карточку экскурсии и времени и классе

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -90,6 +90,10 @@
 
           <div class="item-cart">
             <img src="./img/sobor.jpg" class="item-img" alt="item-img" />
+            <div class="item-cart-desc">
+              <p class="item-age">1-4 классы</p>
+              <p class="item-time">~ 90 мин</p>
+            </div>
             <details class="item-list">
               <summary class="item-title">Красная Площадь</summary>
               <div class="item-desc">
@@ -135,6 +139,10 @@
 
           <div class="item-cart">
             <img src="./img/sobor.jpg" class="item-img" alt="item-img" />
+            <div class="item-cart-desc">
+              <p class="item-age">1-4 классы</p>
+              <p class="item-time">~ 90 мин</p>
+            </div>
             <details class="item-list">
               <summary class="item-title">Красная Площадь</summary>
               <div class="item-desc">
@@ -180,6 +188,10 @@
 
           <div class="item-cart">
             <img src="./img/sobor.jpg" class="item-img" alt="item-img" />
+            <div class="item-cart-desc">
+              <p class="item-age">1-4 классы</p>
+              <p class="item-time">~ 90 мин</p>
+            </div>
             <details class="item-list">
               <summary class="item-title">Красная Площадь</summary>
               <div class="item-desc">
