добавила стили базовой информации карточки экскурсии

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -96,14 +96,34 @@
             </div>
             <details class="item-list">
               <summary class="item-title">Красная Площадь</summary>
-              <div class="item-desc">
+              <section class="item-desc">
+                <h3 class="hidden-section">section excurtions desc</h3>
+
                 <div class="item-desc-basic-info">
-                  <ul>
-                    <li>Группа от 5 чел</li>
-                    <li>Место встречи: м. Профсоюзная, выход 2</li>
-                    <li>Продолжительность: 120 мин</li>
-                    <li>Стоимость: 20 000</li>
-                    <li>Забронировать</li>
+                  <ul class="basic-info">
+                    <li class="basic-info-list">
+                      <span><img src="" class="item-desc-img" alt="" /></span>
+                      <p class="item-desc-title">Группа</p>
+                      <span class="item-desc-text">5 - 30</span>
+                    </li>
+                    <li class="basic-info-list">
+                      <span><img src="" class="item-desc-img" alt="" /></span>
+                      <p class="item-desc-title">Место встречи</p>
+                      <span class="item-desc-text"
+                        >м. Профсоюзная, выход 2</span
+                      >
+                    </li>
+                    <li class="basic-info-list">
+                      <span><img src="" class="item-desc-img" alt="" /></span>
+                      <p class="item-desc-title">Продолжительность</p>
+                      <span class="item-desc-text">120 мин</span>
+                    </li>
+                    <li class="basic-info-list">
+                      <span><img src="" class="item-desc-img" alt="" /></span>
+                      <p class="item-desc-title">Стоимость</p>
+                      <span class="item-desc-text">20 000</span>
+                    </li>
+                    <li class="basic-info-list">Забронировать</li>
                   </ul>
                 </div>
 
@@ -142,6 +162,7 @@
                   placeat nesciunt laboriosam dolores illum necessitatibus
                   aperiam earum sit explicabo. Expedita!
                 </p>
+
                 <div class="item-desc-basic-info">
                   <ul>
                     <li>Место встречи</li>
@@ -151,7 +172,16 @@
                     <li>Забронировать</li>
                   </ul>
                 </div>
-              </div>
+              </section>
+              <section class="item-gallery">
+                <h3 class="hidden-section">section excurtions gallery</h3>
+
+                Галерея
+              </section>
+              <section class="reviews">
+                <h3 class="hidden-section">section excurtions reviews</h3>
+                Отзывы
+              </section>
             </details>
           </div>
         </section>
