--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="page">
     <header class="header">
       <div class="container header-container">
         <nav class="nav">
