дописала стили основной информации и кнопки забронировать экскурсию в мобильной версии

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -102,28 +102,50 @@
                 <div class="item-desc-basic-info">
                   <ul class="basic-info">
                     <li class="basic-info-list">
-                      <span><img src="" class="item-desc-img" alt="" /></span>
+                      <span class="basic-info-icon"
+                        ><img
+                          src="./img/icon-people.png"
+                          class="item-desc-img"
+                          alt="icon-location"
+                      /></span>
                       <p class="item-desc-title">Группа</p>
                       <span class="item-desc-text">5 - 30</span>
                     </li>
                     <li class="basic-info-list">
-                      <span><img src="" class="item-desc-img" alt="" /></span>
+                      <span class="basic-info-icon"
+                        ><img
+                          src="./img/icon-location.png"
+                          class="item-desc-img"
+                          alt="icon-people"
+                      /></span>
                       <p class="item-desc-title">Место встречи</p>
                       <span class="item-desc-text"
                         >м. Профсоюзная, выход 2</span
                       >
                     </li>
                     <li class="basic-info-list">
-                      <span><img src="" class="item-desc-img" alt="" /></span>
+                      <span class="basic-info-icon"
+                        ><img
+                          src="./img/icon-time.png"
+                          class="item-desc-img"
+                          alt="icon-time"
+                      /></span>
                       <p class="item-desc-title">Продолжительность</p>
                       <span class="item-desc-text">120 мин</span>
                     </li>
                     <li class="basic-info-list">
-                      <span><img src="" class="item-desc-img" alt="" /></span>
+                      <span class="basic-info-icon"
+                        ><img
+                          src="./img/icon-coins.png"
+                          class="item-desc-img"
+                          alt="icon-coins"
+                      /></span>
                       <p class="item-desc-title">Стоимость</p>
-                      <span class="item-desc-text">20 000</span>
+                      <span class="item-desc-text">20 000 <span>₽</span></span>
                     </li>
-                    <li class="basic-info-list">Забронировать</li>
+                    <li class="basic-info-list-link">
+                      <a href="#" class="order-link">Забронировать</a>
+                    </li>
                   </ul>
                 </div>
 
@@ -162,14 +184,65 @@
                   placeat nesciunt laboriosam dolores illum necessitatibus
                   aperiam earum sit explicabo. Expedita!
                 </p>
-
                 <div class="item-desc-basic-info">
-                  <ul>
-                    <li>Место встречи</li>
-                    <li>Место завершения</li>
-                    <li>Гид:</li>
-                    <li>Стоимость</li>
-                    <li>Забронировать</li>
+                  <ul class="basic-info">
+                    <li class="basic-info-list">
+                      <span class="basic-info-icon"
+                        ><img
+                          src="./img/icon-people.png"
+                          class="item-desc-img"
+                          alt="icon-location"
+                      /></span>
+                      <p class="item-desc-title">Гид</p>
+                      <span class="item-desc-text">Иванов Иван Иванович</span>
+                    </li>
+                    <li class="basic-info-list">
+                      <span class="basic-info-icon"
+                        ><img
+                          src="./img/icon-location.png"
+                          class="item-desc-img"
+                          alt="icon-people"
+                      /></span>
+                      <p class="item-desc-title">Место встречи</p>
+                      <span class="item-desc-text"
+                        >м. Профсоюзная, выход 2</span
+                      >
+                    </li>
+                    <li class="basic-info-list">
+                      <span class="basic-info-icon"
+                        ><img
+                          src="./img/icon-location.png"
+                          class="item-desc-img"
+                          alt="icon-people"
+                      /></span>
+                      <p class="item-desc-title">Место завершения</p>
+                      <span class="item-desc-text"
+                        >м. Профсоюзная, выход 2</span
+                      >
+                    </li>
+                    <li class="basic-info-list">
+                      <span class="basic-info-icon"
+                        ><img
+                          src="./img/icon-time.png"
+                          class="item-desc-img"
+                          alt="icon-time"
+                      /></span>
+                      <p class="item-desc-title">Продолжительность</p>
+                      <span class="item-desc-text">120 мин</span>
+                    </li>
+                    <li class="basic-info-list">
+                      <span class="basic-info-icon"
+                        ><img
+                          src="./img/icon-coins.png"
+                          class="item-desc-img"
+                          alt="icon-coins"
+                      /></span>
+                      <p class="item-desc-title">Стоимость</p>
+                      <span class="item-desc-text">20 000 <span>₽</span></span>
+                    </li>
+                    <li class="basic-info-list-link">
+                      <a href="#" class="order-link">Забронировать</a>
+                    </li>
                   </ul>
                 </div>
               </section>
