изменила отступы в блоках основной информации экскурсии

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -130,7 +130,7 @@
                           class="item-desc-img"
                           alt="icon-time"
                       /></span>
-                      <p class="item-desc-title">Продолжительность</p>
+                      <p class="item-desc-title">Длительность</p>
                       <span class="item-desc-text">120 мин</span>
                     </li>
                     <li class="basic-info-list">
@@ -140,7 +140,7 @@
                           class="item-desc-img"
                           alt="icon-coins"
                       /></span>
-                      <p class="item-desc-title">Стоимость</p>
+                      <p class="item-desc-title">Стоимость (группа)</p>
                       <span class="item-desc-text">20 000 <span>₽</span></span>
                     </li>
                     <li class="basic-info-list-link">
@@ -227,7 +227,7 @@
                           class="item-desc-img"
                           alt="icon-time"
                       /></span>
-                      <p class="item-desc-title">Продолжительность</p>
+                      <p class="item-desc-title">Длительность</p>
                       <span class="item-desc-text">120 мин</span>
                     </li>
                     <li class="basic-info-list">
@@ -237,7 +237,7 @@
                           class="item-desc-img"
                           alt="icon-coins"
                       /></span>
-                      <p class="item-desc-title">Стоимость</p>
+                      <p class="item-desc-title">Стоимость (группa)</p>
                       <span class="item-desc-text">20 000 <span>₽</span></span>
                     </li>
                     <li class="basic-info-list-link">
