--- a/categoryPage.html
+++ b/categoryPage.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Экскурсии</title>
 
-    <link rel="stylesheet" href="scss-css/style.css" />
+    <!-- Bootstrap CSS для карусели -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Gabriela&family=Great+Vibes&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Свои стили -->
+    <link rel="stylesheet" href="scss-css/style.css" />
   </head>
   <body class="page">
     <header class="header">
@@ -95,7 +106,7 @@
               <p class="item-time">~ 90 мин</p>
             </div>
             <details class="item-list">
-              <summary class="item-title">Красная Площадь</summary>
+              <summary class="item-title">Урок «Мир глазами историка»</summary>
               <section class="item-desc">
                 <h3 class="hidden-section">section excurtions desc</h3>
 
@@ -109,7 +120,7 @@
                           alt="icon-location"
                       /></span>
                       <p class="item-desc-title">Группа</p>
-                      <span class="item-desc-text">5 - 30</span>
+                      <span class="item-desc-text">5 - 30 чел.</span>
                     </li>
                     <li class="basic-info-list">
                       <span class="basic-info-icon"
@@ -119,8 +130,8 @@
                           alt="icon-people"
                       /></span>
                       <p class="item-desc-title">Место встречи</p>
-                      <span class="item-desc-text"
-                        >м. Профсоюзная, выход 2</span
+                      <span class="item-desc-text">
+                        Славянская площадь, Китай - город выход 10</span
                       >
                     </li>
                     <li class="basic-info-list">
@@ -150,40 +161,58 @@
                 </div>
 
                 <p class="item-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab et
-                  voluptates pariatur dolorum non harum adipisci fugit sit
-                  quaerat repellendus doloremque at, assumenda sunt provident ea
-                  eveniet amet ipsam, quas vitae repudiandae. Vel asperiores
-                  nemo expedita illo recusandae animi consequatur molestiae
-                  dicta neque ipsam impedit praesentium reiciendis delectus
-                  enim, numquam ullam unde, pariatur cupiditate voluptates?
-                  Quidem maiores ut ullam blanditiis laborum illo modi placeat
-                  tempora repellendus, laudantium sapiente sint quam aliquam
-                  nobis porro cupiditate ad maxime laboriosam omnis. Nam numquam
-                  exercitationem nemo amet sunt tempore officiis iste, voluptas
-                  eius est. Praesentium autem sint cupiditate nemo aperiam
-                  nihil? Enim similique id dignissimos corporis a repellendus,
-                  sapiente nihil architecto reiciendis eius voluptatibus
-                  recusandae rem consectetur minima et nesciunt eligendi
-                  doloremque qui tempora voluptas unde maiores. Incidunt placeat
-                  fuga voluptate voluptatem dicta eos similique sit esse
-                  cupiditate veritatis, tempore, porro ab expedita modi fugiat
-                  labore hic. Rem possimus repellat, fuga quam atque
-                  necessitatibus pariatur ducimus dolorum temporibus accusamus
-                  voluptatibus quo, tempore minus commodi provident reiciendis
-                  ipsam inventore deserunt cupiditate quaerat. Aliquid, laborum
-                  maiores. Aliquid adipisci porro doloribus iste! Veritatis
-                  eveniet obcaecati laboriosam fugiat atque at reprehenderit
-                  delectus aperiam velit similique, maxime culpa a dolor
-                  perspiciatis, voluptas fugit dicta voluptatum? Doloribus velit
-                  voluptas ratione eius. Magnam ut ipsa ullam provident voluptas
-                  voluptatum neque blanditiis fugiat dolorem doloribus harum
-                  perferendis aliquam tempore qui aperiam, cupiditate error eum
-                  aut facilis laudantium in nisi! Nam fugit aspernatur aliquid
-                  culpa est, incidunt quibusdam esse consectetur possimus sequi,
-                  placeat nesciunt laboriosam dolores illum necessitatibus
-                  aperiam earum sit explicabo. Expedita!
+                  Экскурсия построена по программе учебника «школа России» 4й
+                  класс Окружающий мир. Поговорим о о сложных науках «история» и
+                  «археология». Затронем и литературу.
                 </p>
+                <ul class="item-desc-table">
+                  <li class="item-desc-list">
+                    <h6 class="item-desc-list-title"></h6>
+                    <ol class="item-desc-sublist">
+                      <li class="item-desc-line">
+                        Кирил и Мефодий. Славянская азбука. Как появилась
+                        письменность.
+                      </li>
+                      <li class="item-desc-line">
+                        Дмитрий Донской и куликовская битва. Сергий Радонежский.
+                      </li>
+                      <li class="item-desc-line">Стена Китай города, прогулка по стене.</li>
+                      <li class="item-desc-line">
+                        Разговор в Зарядье об Иване Третьем и присоединения
+                        земель на примере Псковской горки. Поговорим о гербе
+                        Москвы и России.
+                      </li>
+                      <li class="item-desc-line">Палаты бояр Романовых</li>
+                      <li class="item-desc-line">Старый Английский двор (Иван Грозный)</li>
+                    </ol>
+                  </li>
+                  <li class="item-desc-list">
+                  <h6 class="item-desc-list-title">Красная площадь</h6>  
+                    <ol class="item-desc-sublist">
+                      <li class="item-desc-line">
+                        Храм Покрова Богородиться, что на рву и присоединения
+                        Казани при Иване Грозном.
+                      </li class="item-desc-line">
+                      <li class="item-desc-line">Спасская башня</li>
+                      <li class="item-desc-line">Никольская башня</li>
+                    </ol>
+                  </li>
+                  <li class="item-desc-list">
+                   <h6 class="item-desc-list-title">Улица Никольская</h6> 
+                    <ol class="item-desc-sublist">
+                      <li class="item-desc-line">
+                        Заиконоспасский монастырь и Ломаносов (греко латинская
+                        академия)
+                      </li>
+                      <li class="item-desc-line">Первый печатный дров и первая книга</li>
+                      <li class="item-desc-line">
+                        Памятник Ивану Федорову (первопечатнику) и раскопки
+                        храма.
+                      </li>
+                    </ol>
+                  </li>
+                </ul>
+                <p class="item-text"></p>
                 <div class="item-desc-basic-info">
                   <ul class="basic-info">
                     <li class="basic-info-list">
@@ -205,7 +234,7 @@
                       /></span>
                       <p class="item-desc-title">Место встречи</p>
                       <span class="item-desc-text"
-                        >м. Профсоюзная, выход 2</span
+                        >Славянская площадь, Китай - город выход 10</span
                       >
                     </li>
                     <li class="basic-info-list">
@@ -217,7 +246,7 @@
                       /></span>
                       <p class="item-desc-title">Место завершения</p>
                       <span class="item-desc-text"
-                        >м. Профсоюзная, выход 2</span
+                        >метро Лубянка (Никольская улица)</span
                       >
                     </li>
                     <li class="basic-info-list">
@@ -246,14 +275,98 @@
                   </ul>
                 </div>
               </section>
-              <section class="item-gallery">
+              <section class="item-gallery container">
                 <h3 class="hidden-section">section excurtions gallery</h3>
 
-                Галерея
+                <h2 class="item-gallery-title">Галерея</h2>
+
+                <div
+                  id="carouselExampleAutoplaying"
+                  class="carousel slide"
+                  data-bs-ride="carousel"
+                >
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="..." class="d-block w-100" alt="..." />
+                    </div>
+                    <div class="carousel-item">
+                      <img src="..." class="d-block w-100" alt="..." />
+                    </div>
+                    <div class="carousel-item">
+                      <img src="..." class="d-block w-100" alt="..." />
+                    </div>
+                  </div>
+                  <button
+                    class="carousel-control-prev"
+                    type="button"
+                    data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev"
+                  >
+                    <span
+                      class="carousel-control-prev-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button
+                    class="carousel-control-next"
+                    type="button"
+                    data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next"
+                  >
+                    <span
+                      class="carousel-control-next-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
               </section>
-              <section class="reviews">
+              <section class="reviews container">
                 <h3 class="hidden-section">section excurtions reviews</h3>
                 Отзывы
+
+                <div
+                  id="carouselExampleAutoplaying"
+                  class="carousel slide"
+                  data-bs-ride="carousel"
+                >
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="..." class="d-block w-100" alt="..." />
+                    </div>
+                    <div class="carousel-item">
+                      <img src="..." class="d-block w-100" alt="..." />
+                    </div>
+                    <div class="carousel-item">
+                      <img src="..." class="d-block w-100" alt="..." />
+                    </div>
+                  </div>
+                  <button
+                    class="carousel-control-prev"
+                    type="button"
+                    data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="prev"
+                  >
+                    <span
+                      class="carousel-control-prev-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button
+                    class="carousel-control-next"
+                    type="button"
+                    data-bs-target="#carouselExampleAutoplaying"
+                    data-bs-slide="next"
+                  >
+                    <span
+                      class="carousel-control-next-icon"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
               </section>
             </details>
           </div>
@@ -288,5 +401,12 @@
         <p class="info">VIS© 2025</p>
       </div>
     </footer>
+
+    <!-- Bootstrap JS для карусели -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
