заменила слова подробнее и закрыть на стрелки в мобильной версии

--- a/categoryPage.html
+++ b/categoryPage.html
@@ -165,7 +165,7 @@
                   класс Окружающий мир. Поговорим о о сложных науках «история» и
                   «археология». Затронем и литературу.
                 </p>
-                <ul class="item-desc-table">
+                <ul class="item-desc-table item-text">
                   <li class="item-desc-list">
                     <h6 class="item-desc-list-title"></h6>
                     <ol class="item-desc-sublist">
